# simple_fluids_rust

./: .gitignore  Cargo.toml  README.md
assets/config/: display.ron  input.ron
config/: display.ron  input.ron
config/spritesheets/: water_sritesheet.ron
src/: main.rs
src/components/: fluid_cube.rs  fluid_world.rs  liquid_world.rs  mod.rs  particle.rs  player.rs
src/states/: game.rs
src/systems/: fluid_system.rs  mod.rs  particle_system.rs
src/tiles/: dirt_tile.rs  mod.rs
src/utils/: camera_util.rs  debug_util.rs  fluid_util.rs  mod.rs  player_util.rs  rust_sim_util.rs  sprite_util.rs  tile_map_util.rs
