[package]
name = "simple_fluids_rust"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
nalgebra = "0.21.1"
ncollide2d = "0.23.2"
nphysics2d = "0.16.0"
salva2d = "0.4.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
